# odm-p1d

./: README.md  requirements.in  requirements.txt  setup.cfg  setup.py
odm-p1d/: connection.py
odm-p1d/collection/: product.py  recomendation.py  user.py
odm_p1d/collection/: subsequence.py  user.py
