[metadata]
name = odm_p1d
version = 0.0.3
author = Abys
description = MongoDB para tarea
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.extras_require]
dev =
    pytest
    black
    isort
    mypy
